Encounter serialization